Run in invariant mode

--- a/src/AgileOctopus.csproj
+++ b/src/AgileOctopus.csproj
@@ -8,5 +8,6 @@
   <PropertyGroup>
     <PublishTrimmed>true</PublishTrimmed>
     <PublishAot>true</PublishAot>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 </Project>
