--- a/.github/workflows/lon.yml
+++ b/.github/workflows/lon.yml
@@ -2,7 +2,7 @@ name: Lon
 
 on:
   schedule:
-    - cron: "0 12 * * 2"
+    - cron: "0 12 * * 1-5"
   workflow_dispatch:
 
 jobs:
@@ -15,12 +15,38 @@ jobs:
       issues: write
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Install Lix
         uses: samueldr/lix-gha-installer-action@v2025-02-26.prerelease
 
-      - env:
+      - name: Install Cachix
+        uses: cachix/cachix-action@v15
+        with:
+          name: drakon64-agileoctopus
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+
+      - name: Build Nix shell
+        run: nix-shell -A lon --run "exit"
+
+      - name: Evaluate with current lockfile
+        run: |
+          echo "CURRENT_HASH=$(nix eval --expr 'import ./. {}' --raw --impure)" >> "$GITHUB_ENV"
+          echo "CURRENT_SHELL_HASH=$(nix eval --expr 'import ./shell.nix {}' --raw --impure)" >> "$GITHUB_ENV"
+
+      - name: Update Lon lockfile
+        run: nix-shell -A lon --run "lon update nixpkgs"
+
+      - name: Build and evaluate with updated lockfile
+        run: |
+          echo "NEW_HASH=$(nix-build)" >> "$GITHUB_ENV"
+          echo "NEW_SHELL_HASH=$(nix eval --expr 'import ./shell.nix {}' --raw --impure)" >> "$GITHUB_ENV"
+
+      - name: Open pull request
+        run: |
+          git checkout lon.lock
+          nix-shell -A lon --run "lon bot github"
+        env:
           LON_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LON_LABELS: "lon,bot"
-        run: nix-shell -A lon --run "lon bot github"
+        if: ${{ env.NEW_HASH != env.CURRENT_HASH || env.NEW_SHELL_HASH != env.CURRENT_SHELL_HASH }}
